--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ theme: PaperMod
 
 params:
   defaultTheme: auto
-  keywords: [Blog, Portfolio, PaperMod]
+  keywords: [Blog, Portfolio]
   homeInfoParams:
     Title: Gautier Marechal 🌞
     Content: >
@@ -38,3 +38,4 @@ menu:
 
 taxonomies:
   category: categories
+  project: projects
